<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_bridge</name>
  <version>0.1.0</version>
  <description>Topological navigation action bridge</description>

  <maintainer email="benoit@robots.ox.ac.uk">Benoit Casseau</maintainer>

  <license>Apache License 2.0</license>

  <author email="benoit@robots.ox.ac.uk">Benoit Casseau</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>nav2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>stretch_topological_navigation_msgs</depend>

  <!-- ROS 1 dependencies -->
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>ori_topological_navigation_msgs</depend>
  <depend>roscpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
